SERVER-55353: Ignore pre/post image when tenant oplog batcher can't find one